--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,7 @@
   }
 
   .header-row {
-    background-color: orange;
+    background-color: powderblue;
     display: flex;
     justify-content: space-between;
     align-items: center;
